Remove the code that hides changes/events/surname tables until after they have been processed by datatables.  This fixes the problem of block content not showing, at the expense of a very brief "flash of unstyled content"

--- a/themes/clouds/style.css
+++ b/themes/clouds/style.css
@@ -1783,7 +1783,7 @@ html[dir='rtl'] .DataTables_sort_wrapper span {left:auto; right:0; margin-right:
 
 /* ========= List styles ================= */
 .source-list, .note-list, .repo-list, .media-list, .indi-list, .fam-list  {margin:5px auto; visibility:hidden; width:98%;}
-.surname-list, .givn-list  {margin:5px auto; visibility:hidden;}
+.surname-list, .givn-list  {margin:5px auto;}
 .source-list table, .note-list table, .repo-list table, .media-list table, .indi-list table, .fam-list table  {width:100%;}
 .source-list td, .note-list td, .repo-list td, .media-list td, .indi-list td, .fam-list td, .recent_changes_block td, .upcoming_events_block, .surname-list td, .givn-list td {padding:2px 5px;}
 .indi-list td, .fam-list td {color:#555;}
